# Adobe_DNG_SDK_1.6_Linux

./: DNG_ReadMe.txt  JPEG_ReadMe.txt  README.md  XMP_ReadMe.txt  XMP_cmake_notes.txt
dng_sdk/projects/cmake/: CMakeLists.txt
dng_sdk/projects/linux/: CMakeCache.txt  Makefile  cmake_install.cmake  cmd.txt  dng_validate
dng_sdk/projects/mac/dng_validate.xcodeproj/: project.pbxproj
dng_sdk/projects/mac/xcconfig/: ValidateDebug64.xcconfig  ValidateRelease64.xcconfig  dngsdkArchDeploy.xcconfig  dngsdkBuild.xcconfig  dngsdkFlags.xcconfig  dngsdkLanguage.xcconfig  xmp.xcconfig
dng_sdk/projects/win/: dng_validate.sln
dng_sdk/projects/win/dng_validate/: CMakeLists.txt  Makefile  cmake_install.cmake  dng_validate.vcxproj  dng_validate.vcxproj.filters
dng_sdk/projects/win/settings/: dngsdkArm64.props  dngsdkFlags.props  dngsdkFlagsClassic.props  dngsdkIntelFlags.props  dngsdkValidateTarget.props  dngsdkWarningTreatment.props
dng_sdk/source/: RawEnvironment.h  dng_1d_table.cpp  dng_bad_pixels.cpp  dng_big_table.cpp  dng_bottlenecks.cpp  dng_camera_profile.cpp  dng_color_spec.cpp  dng_date_time.cpp  dng_file_stream.cpp  dng_flags.h  dng_gain_map.cpp  dng_globals.cpp  dng_host.cpp  dng_ifd.cpp  dng_image.cpp  dng_image_writer.cpp  dng_info.cpp  dng_jpeg_image.cpp  dng_lens_correction.cpp  dng_memory.cpp  dng_misc_opcodes.cpp  dng_mosaic_info.cpp  dng_negative.cpp  dng_opcode_list.cpp  dng_parse_utils.cpp  dng_read_image.cpp  dng_reference.cpp  dng_render.cpp  dng_resample.cpp  dng_safe_arithmetic.cpp  dng_shared.cpp  dng_spline.cpp  dng_stream.cpp  dng_string.cpp  dng_update_meta.cpp  dng_validate.cpp  dng_xmp.cpp  dng_xmp_sdk.cpp
